# config/routes.rb
@@ -467,6 +467,9 @@ Rails.application.routes.draw do
       resources :permit_applications, only: %i[show] do
         post "search", on: :collection, to: "permit_applications#index"
         patch "status", on: :member, to: "permit_applications#update_status"
+        get "submission_versions/:submission_version_id",
+            on: :member,
+            to: "permit_applications#show_submission_version"
         collection do
           resources :versions, as: "template_versions", only: [] do
             get "integration_mapping",
