# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.2].define(version: 2026_09_11_174500) do
+ActiveRecord::Schema[7.2].define(version: 2026_09_14_180000) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pgcrypto"
   enable_extension "plpgsql"
@@ -604,7 +604,6 @@ ActiveRecord::Schema[7.2].define(version: 2026_09_11_174500) do
     t.datetime "signed_off_at"
     t.string "nickname"
     t.datetime "viewed_at"
-    t.jsonb "zipfile_data"
     t.uuid "template_version_id", null: false
     t.jsonb "form_customizations_snapshot"
     t.string "reference_number"
@@ -1149,6 +1148,8 @@ ActiveRecord::Schema[7.2].define(version: 2026_09_11_174500) do
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
     t.jsonb "step_code_checklist_json", default: {}
+    t.datetime "package_ready_at"
+    t.jsonb "zipfile_data"
     t.index ["permit_application_id"], name: "index_submission_versions_on_permit_application_id"
   end
 
